add(watchhub_project)

--- a/watch/v=UceaBD0p.html
+++ b/watch/v=UceaBD0p.html
@@ -71,7 +71,7 @@
         <i class="fas fa-bars"></i>
     </button> &nbsp;&nbsp;
     <a class="navbar-brand mr-1"><img
-            class="img-fluid" alt="" src="./assets/images/logo.png"></a>
+            class="img-fluid" alt="" src="https://oss-xpc0.xpccdn.com/Upload/edu/2018/04/195ad8494126bc9.png" style="width: 163px;"></a>
     <!-- Navbar Search -->
     <!--    <form class="d-none d-md-inline-block form-inline ml-auto mr-0 mr-md-5 my-2 my-md-0 osahan-navbar-search">-->
     <!--        <div class="input-group">-->
