add(watchhub_project)

--- a/watch/v=UceaBD0p.html
+++ b/watch/v=UceaBD0p.html
@@ -540,8 +540,8 @@
                 lang: 'zh-cn',
                 video: false,
                 video: {
-                    url: 'https://qiniu-xpc4.xpccdn.com/5e0ee5faac4fd.mp4',
-                    pic: './assets/images/night_shift_mortuary.png.png',
+                    url: 'https://qiniu-xpc4.xpccdn.com/5955ce146eec2.mp4',
+                    pic: 'https://raw.githubusercontent.com/proxy-studio/proxy-studio.github.io/master/watch/assets/images/night_shift_mortuary.png',
                     thumbnails: 'https://cs.xinpianchang.com/uploadfile/article/2020/01/03/5e0ee5f4a2379.jpeg',
                 }
             });
