add(watchhub_project)

--- a/watch/v=UceaBD0p.html
+++ b/watch/v=UceaBD0p.html
@@ -242,7 +242,7 @@
                                     </button>
                                 </div>
                                 <img class="img-fluid"
-                                     src="https://raw.githubusercontent.com/proxy-studio/proxy-studio.github.io/master/watch/assets/images/user.jpg"
+                                     src="https://oss-xpc0.xpccdn.com/passport/avatar/10041456/2020/1/5e1b4c8feb988.png"
                                      alt="JEEP711">
                                 <p>
                                     <a href="https://www.xinpianchang.com/JEEP711" target="_blank">
